# 2023_1_Holi

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  sdf
.github/workflows/: ci.yml
User/: CMakeLists.txt
User/test/: CMakeLists.txt  main.cpp  user_test.cpp
api_client/headers/Base/: client.hpp  request.hpp  response.hpp
api_client/headers/VK/: vk_response.hpp
api_client/headers/YT/: yt_client.hpp  yt_response.hpp
api_client/src/VK/: CMakeLists.txt  vk_request.cpp  vk_response.cpp
api_client/src/YT/: CMakeLists.txt  yt_client.cpp  yt_request.cpp
api_client/tests/: README.txt
api_client/tests/VK/: vk_return_response_test.cpp
client/: CMakeLists.txt
client/include/: CMakeLists.txt  i_response_handler.h  message_info.h  namespaces.h
client/include/api_client/Base/: client.hpp  request.hpp  response.hpp
client/include/api_client/VK/: vk_client.hpp  vk_request.hpp  vk_response.hpp
client/include/api_client/YT/: yt_client.hpp  yt_request.hpp  yt_response.hpp
client/include/client/: client.h  client_http.h  client_https.h  errors.h  https_request_maker_tmp.h  i_client.h  i_response_handler.h  message_info.h  request_maker_tmp.h  response_handler.h  root_certificates.hpp
client/include/gui/: CMakeLists.txt  authenticationmanager.h  chat.h  config.h  login.h  login.ui  main_page.ui  mainwindow.h  mainwindow.ui  oauthprovider.h  onyoutube.h  onyoutube.ui  registrationmanager.h  signup.h  signup.ui  ui_albums.h  ui_chat.h  ui_config.h  ui_friends.h  ui_friends_in.h  ui_friends_out.h  ui_login.h  ui_main_page.h  ui_mainwindow.h  ui_onvk.h  ui_onyoutube.h  ui_signup.h  user.h
client/include/request_maker/: requestmaker_http.hpp  requestmaker_https.hpp  response_handler.h
client/include/user/: user.hpp
client/src/: main.cpp  response_handler.cpp
client/src/api_client/VK/: vk_client.cpp  vk_request.cpp  vk_response.cpp
client/src/api_client/YT/: yt_client.cpp  yt_request.cpp  yt_response.cpp
client/src/client/: client.cpp  client_http.cpp  client_https.cpp  https_request_maker_tmp.cpp  message_info.cpp  request_maker_tmp.cpp  response_handler.cpp
client/src/gui/: albums.cpp  authenticationmanager.cpp  chat.cpp  config.cpp  friends.cpp  friends_in.cpp  friends_out.cpp  login.cpp  main_page.cpp  mainwindow.cpp  oauthprovider.cpp  onvk.cpp  onyoutube.cpp  registrationmanager.cpp  requestmaker.cpp  signup.cpp
client/src/request_maker/: message_info.cpp  requestmaker_http.cpp  requestmaker_https.cpp  response_handler.cpp
client/src/user/: user.cpp
client/tests/: CMakeLists.txt  main.cpp  response_handler_test.cpp
client/tests/api_client/: CMakeLists.txt
client/tests/api_client/VK/: vk_client_test.cpp  vk_request_test.cpp
client/tests/api_client/YT/: yt_client_test.cpp  yt_request_test.cpp  yt_return_response_test.cpp
client/tests/gui/: test.cpp
server/: CMakeLists.txt
server/include/: authorizer.h  chat.h  i_authorizer.h  i_db_connector.h  i_db_model.h  i_route.h  message.h  namespaces.h  playlist.h  profile_reference.h  request_handler.h  room.h  router.h  session.h  user.h  user_friend_route.h  user_route.h  video.h  video_list_route.h  video_route.h
server/include/auth/: authorizer.h  i_authorizer.h
server/include/db_tmp/: db_connector.h  i_db_connector.h
server/include/orm/: chat.h  db_connector.h  errors.h  follow.h  message.h  playlist.h  profile_reference.h  room.h  user.h  video.h
server/include/request_handling/: i_request_handler.h  i_route.h  i_router.h  parsed_request.h  request_handler.h  router.h  user_auth_check_route.h  user_auth_login_route.h  user_friend_route.h  user_route.h  video_all_route.h  video_list_all_route.h  video_list_route.h  video_route.h
server/include/server/: server.h  session.h
server/src/: authorizer.cpp  boffeer.cpp  chat.cpp  db_connector.cpp  follow.cpp  main.cpp  message.cpp  message_info.cpp  parsed_request.cpp  playlist.cpp  profile_reference.cpp  request_handler.cpp  room.cpp  router.cpp  server.cpp  session.cpp  user.cpp  user_friend_route.cpp  user_route.cpp  video.cpp  video_list_route.cpp  video_route.cpp
server/src/auth/: authorizer.cpp
server/src/db_tmp/: db_connector.cpp
server/src/orm/: chat.cpp  db_connector.cpp  follow.cpp  message.cpp  playlist.cpp  profile_reference.cpp  room.cpp  user.cpp  video.cpp
server/src/request_handling/: message_info.cpp  parsed_request.cpp  request_handler.cpp  router.cpp  user_auth_check_route.cpp  user_auth_login_route.cpp  user_friend_route.cpp  user_route.cpp  video_all_route.cpp  video_list_all_route.cpp  video_list_route.cpp  video_route.cpp
server/src/server/: server.cpp  session.cpp
server/tests/: CMakeLists.txt  chat_model_test.cpp  constants.h  follow_model_test.cpp  main.cpp  message_model_test.cpp  playlist_model_test.cpp  profile_reference_model_test.cpp  request_handler_test.cpp  router_test.cpp  user_friend_route_test.cpp  user_model_test.cpp  user_route_test.cpp  video_list_route.cpp  video_model_test.cpp  video_route_test.cpp
server/tests/orm/: chat_model_test.cpp  follow_model_test.cpp  message_model_test.cpp  playlist_model_test.cpp  profile_reference_model_test.cpp  user_model_test.cpp  video_model_test.cpp
server/tests/request_handling/: request_handler_test.cpp  router_test.cpp  user_friend_route_test.cpp  user_route_test.cpp  video_list_route.cpp  video_route_test.cpp
templates/: albums.cpp  albums.h  albums.ui  chat.cpp  chat.ui  config.cpp  config.h  config.ui  friends.cpp  friends.h  friends.ui  friends_in.cpp  friends_in.h  friends_in.ui  friends_out.cpp  friends_out.h  friends_out.ui  main_page.cpp  main_page.h  main_page.ui  oauthprovider.h  onvk.cpp  onvk.h  onvk.ui  onyoutube.cpp  registrationmanager.h  requestmaker.h  signup.cpp  user.cpp
tests/: CMakeLists.txt  test.cpp
